gobmkida/c1/clear_move_reasons
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/engine/move_reasons.c:559:14: error: expected expression
*( ( _OWORD *)v1 - 33) = 0LL; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/engine/move_reasons.c:559:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v1 - 33) = 0LL; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/engine/move_reasons.c:560:14: error: expected expression
*( ( _OWORD *)v1 - 34) = 0LL; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/engine/move_reasons.c:560:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v1 - 34) = 0LL; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/engine/move_reasons.c:561:14: error: expected expression
*( ( _OWORD *)v1 - 35) = 0LL; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/engine/move_reasons.c:561:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v1 - 35) = 0LL; 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/clear_move_reasons/src/obj/1/move_reasons.o] Error 1
